100vh on mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   box-sizing: border-box;
 }
 
 body {
+  min-height: 100vh;
+  min-height: fill-available;
+  min-height: -webkit-fill-available;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+html {
+  height: fill-available;
+  height: -webkit-fill-available;
 }
 
 .App {
-  height: 100vh;
+  height: 100%;
+  max-height: 100vh;
   width: 100%;
   display: grid;
   grid-template-rows: 90% 10%;
@@ -29,7 +38,6 @@ body {
   background-color: #f7444e !important;
 }
 
-
 /* custom scrollbar  */
 ::-webkit-scrollbar {
   width: 8px;
@@ -44,6 +52,6 @@ body {
 ::-webkit-scrollbar-thumb {
   border-radius: 7px;
   background: #f7444e;
-  border-left: 3px solid #EDF2F4;
-  border-right: 3px solid #EDF2F4;
+  border-left: 3px solid #edf2f4;
+  border-right: 3px solid #edf2f4;
 }
